@@ -16,8 +16,8 @@
  */
 package com.webfirmframework.wffweb.css;
 
+import java.io.Serial;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.logging.Level;
@@ -54,6 +54,7 @@ import com.webfirmframework.wffweb.util.StringUtil;
  */
 public class BackgroundImage extends AbstractCssProperty<BackgroundImage> implements StateChangeInformer<Bean> {
 
+    @Serial
     private static final long serialVersionUID = 1_0_0L;
 
     public static final String INITIAL = "initial";
@@ -367,7 +368,7 @@ public class BackgroundImage extends AbstractCssProperty<BackgroundImage> implem
         if (urlCss3Values == null) {
             return null;
         }
-        return Collections.unmodifiableList(Arrays.asList(urlCss3Values));
+        return List.of(urlCss3Values);
     }
 
     /**
